syntax = "proto3";

package razpravljalnica;

option go_package = "/razpravljalnica";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
////////////////////////////////////////////////////////////////////////////////
// Basic data types
////////////////////////////////////////////////////////////////////////////////

message User {
  int64 id = 1;
  string name = 2;
}

message Topic {
  int64 id = 1;
  string name = 2;
}

message Message {
  int64 id = 1;
  int64 topic_id = 2;
  int64 user_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
  int32 likes = 6;
}

message Like {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3; // user who liked the message
}

enum OpType {
  OP_POST   = 0; // add a message to a topic
  OP_LIKE   = 1; // like a message
  OP_DELETE = 2; // delete a message
  OP_UPDATE = 3; // update a message
}

message NodeInfo {
  string node_id = 1;
  string address = 2;
}

////////////////////////////////////////////////////////////////////////////////
// Data plane
////////////////////////////////////////////////////////////////////////////////

service  MessageBoard{
  // Writes (only to head)

  // Creates a new user and assigns it an id
  rpc CreateUser(CreateUserRequest) returns (User);

  // Creates a new topic to which users can post messages
  rpc CreateTopic(CreateTopicRequest) returns (Topic);

  // Post a message to a topic; Succed only if the User and the Topic exist in the data base.
  rpc PostMessage(PostMessageRequest) returns (Message);

  // Update an existing message. Allowed only for the user who posted the message.
  rpc UpdateMessage(UpdateMessageRequest) returns (Message);

  // Delete an existing message. Allowed only for the user who posted the message.
  rpc DeleteMessage(DeleteMessageRequest) returns (google.protobuf.Empty);

  // Like an existing message. Return the message with the new number of likes.
  rpc LikeMessage(LikeMessageRequest) returns (Message);

  // Request a node to which a subscription can be opened.
  rpc GetSubcscriptionNode(SubscriptionNodeRequest) returns (SubscriptionNodeResponse);

  // Reads go to the tail node

  // Returns all the topics
  rpc ListTopics(google.protobuf.Empty) returns (ListTopicsResponse);

  // Returns messages in a topic
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);

  // Subscribe to topics; goes to the node returned by head
  rpc SubscribeTopic(SubscribeTopicRequest) returns (stream MessageEvent);

}

message CreateUserRequest {
  string name = 1;
}

message CreateTopicRequest {
  string name = 1;
}

message PostMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  string text = 3;
}

message DeleteMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  int64 message_id = 3;
}

message UpdateMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  int64 message_id = 3;
  string text = 4; // new text
}

message LikeMessageRequest {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3; // user who posted the like
}

message ListTopicsResponse {
  repeated Topic topics = 1;
}

message GetMessagesRequest {
  int64 topic_id = 1;
  int64 from_message_id = 2; // starting id of the message (0 from beggining)
  int32 limit = 3; // max number of messages
}
message GetMessagesResponse {
  repeated Message messages = 1;
}

message SubscribeTopicRequest {
  repeated int64 topic_id = 1;
  int64 user_id = 2;
  int64 from_message_id = 3; // starting id of the message
  string subscribe_token = 4; // token generated by the head used to authorize the subscription
}

message SubscriptionNodeRequest {
  int64 user_id = 1;
  repeated int64 topic_id = 2;
}

message SubscriptionNodeResponse {
  string subscribe_token = 1; // subscription token to be presented to the returned node
  NodeInfo node = 2;
}

message MessageEvent {
  int64 sequence_number = 1; // monotonically increasing event number
  OpType op = 2; // type of event
  Message message = 3;
  google.protobuf.Timestamp event_at = 4; // timestamp of the event
}

////////////////////////////////////////////////////////////////////////////////
// Control plane
////////////////////////////////////////////////////////////////////////////////

// Return the the head and the tail node address
service ControlPlane {
  rpc GetClusterState(google.protobuf.Empty) returns (GetClusterStateResponse);
}

message GetClusterStateResponse {
  NodeInfo head = 1;
  NodeInfo tail = 2;
}